# Asgard

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.ucv.yaml  docker-compose.yaml  release-please-config.json
anubis-eval/: .dockerignore  .env.judge0  .env.judge0.template  .env.template  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  log4rs.yaml
anubis-eval/.config/: nextest.toml
anubis-eval/eval-lb/: CHANGELOG.md  Dockerfile  nginx.conf
anubis-eval/lib/: Cargo.toml  config.toml
anubis-eval/lib/src/: lib.rs
anubis-eval/migrations/2023-09-20-180041_create_submissions/: down.sql  up.sql
anubis-eval/migrations/2023-10-03-213608_update_test_case/: down.sql  up.sql
anubis-eval/migrations/2023-10-03-221655_convert_pk_to_uuid/: down.sql  up.sql
anubis-eval/migrations/2023-10-04-113726_convert_remained_ids_to_uuid/: down.sql  up.sql
anubis-eval/migrations/2023-10-04-114912_convert_ids_to_text/: down.sql  up.sql
anubis-eval/migrations/2023-10-04-120245_add_test_id_to_testcase/: down.sql  up.sql
anubis-eval/migrations/2023-10-04-121530_convert_numerics_to_reals/: down.sql  up.sql
anubis-eval/migrations/2023-10-18-174317_add_expected_score_field_for_test_cases/: down.sql  up.sql
anubis-eval/migrations/2023-10-24-073527_add_avg_time_and_avg_memory_for_submissions/: down.sql  up.sql
anubis-eval/migrations/2023-10-24-105305_remove_score_field_from_testcases/: down.sql  up.sql
anubis-eval/migrations/2023-10-24-180438_add_compile_output_field_for_testcases/: down.sql  up.sql
anubis-eval/migrations/2023-11-05-151123_add_problems_table/: down.sql  up.sql
anubis-eval/migrations/2024-02-24-222641_add_tests_table/: down.sql  up.sql
anubis-eval/migrations/2024-02-28-152845_add_composite_pk_to_tests_table/: down.sql  up.sql
anubis-eval/src/: main.rs  schema.rs
anubis-eval/src/api/: catchers.rs  cors.rs  create_submission_endpoint.rs  evaluate_job.rs  evaluate_submission_job.rs  get_highest_score_submissions.rs  get_submission_endpoint.rs  get_submissions_endpoint.rs  health_check_endpoint.rs  mod.rs  problem_eval_metadata_upserted_event_handler.rs
anubis-eval/src/application/: auth.rs  dapr_client.rs  dapr_dtos.rs  fsp_dtos.rs  mod.rs
anubis-eval/tests/: integration_test.rs
anubis-eval/tests-setup/: docker-compose.yaml
(+471 files in other folders)
