[package]
name = "anubis-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.1", features = ["postgres"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
uuid = "1.4.1"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
mediator = { version = "0.2.2", features = ["async", "async-trait"] }
mockall = "0.11.4"
lazy_static = "1.4.0"
log4rs = "1.2.0"
jsonwebtoken = "8.3.0"
dotenvy = "0.15.7"
