[package]
name = "anubis-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-cron-scheduler = "0.9.4"
thiserror = "1.0.49"
diesel = { version = "2.1.1", features = ["postgres", "chrono", "r2d2", "uuid", "numeric"] }
diesel_migrations = "2.1.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket-validation = "0.1.3"
validator = "0.16.1"
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_postgres_pool"] }
mediator = { version = "0.2.2", features = ["async", "async-trait"] }
mockall = "0.11.4"
lazy_static = "1.4.0"
log4rs = "1.2.0"
jsonwebtoken = "8.3.0"
dotenvy = "0.15.7"
envy = "0.4.2"
chrono = "0.4.30"
reqwest = { version = "0.11.22", features = ["json"] }
futures = "0.3.28"