[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudevents-sdk = { version = "0.7.0", features = ["warp", "reqwest"] }
serde = { version = "1.0.185", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
serde_json = "1.0.104"
warp = "0.3.5"
reqwest = { version = "0.11.18", features = ["json"] }
futures = "0.3.28"
